modified stram